syntax = "proto3";
package conduit.module.v1;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

service ConduitModule {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}
